# unicode-api

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-bake.hcl  noxfile.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.cfg  temp.html  tox.ini
.github/workflows/: deploy.yml  deploy_unicode_api.yml
app/: api_docs.py  cli.py  constants.py  custom_swagger.py  custom_types.py  main.py  tasks.py
app/api/api_v1/: api.py  dependencies.py  pagination.py
app/api/api_v1/dependencies/: __init__.py  block_name_resolver.py  block_search_params.py  char_search_params.py  db_session.py  filter_param_matcher.py  filter_params.py  filter_settings.py  list_params.py  plane_abbrev_resolver.py  rate_limit.py  util.py
app/api/api_v1/endpoints/: blocks.py  (+4 more)
app/config/: __init__.py  api_settings.py  dotenv_file.py
app/core/: cache.py  config.py  constants.py  db.py  dotenv_file.py  logging.py  rate_limit.py  redis_client.py  redis_types.py  result.py  string_util.py  umami.py  util.py
app/core/config/: __init__.py  config.py  test_config.py
app/core/enums/: __init__.py  block_name.py  plane_name.py
app/data/: blocks.json  blocks.py  cache.py  categories.py  characters.json  characters.py  constants.py  encoding.py  planes.py  tasks.py  unicode.py
app/data/json/: blocks.json  characters.json  planes.json
app/data/scripts/: __init__.py  backup_db_and_json_files.py  bootstrap_unicode_data.py  get_prod_data.py  get_unicode_db.py  get_xml_unicode_db.py  init_prod_data.py  parse_xml_unicode_db.py  populate_sqlite_db.py  save_parsed_data_to_csv.py  script_types.py  sync_req_files.py  types.py  update_all_data.py  update_readme.py  update_test_data.py  util.py  xml_parser.py
app/data/util/: __init__.py  command.py  download.py  retry.py  spinners.py
app/db/: __init__.py  cache.py  char_filters.py  character_props.py  constants.py  engine.py  get_char_details.py  models.py  session.py
app/db/procs/: __init__.py  filter_characters.py  get_char_details.py  get_unicode_versions.py
app/docs/: content.py  readme.py  swagger_ui.py  util.py
app/docs/api_docs/: readme.py  swagger_ui.py
app/docs/dependencies/: __init__.py  custom_parameters.py  filter_tables.py
app/enums/: char_filter_flags.py  property_group.py  request_type.py
app/models/: block.py  camel_model.py  character.py  pagination.py  plane.py  property_values.py  util.py
app/models/enums/: __init__.py  bidirectional_bracket_type.py  bidirectional_class.py  general_category.py  hangul_syllable_type.py  property_group.py  vertical_orientation_type.py
app/schemas/: __init__.py  block.py  camel_model.py  character.py  pagination.py  plane.py  prop_groups.py  responses.py  search.py  util.py
app/schemas/enums/: __init__.py  bidirectional_bracket_type.py  bidirectional_class.py  block.py  block_name.py  char_filter_flags.py  character_type.py  combining_class_category.py  decomposition_type.py  east_asian_width_type.py  general_category.py  hangul_syllable_type.py  joining_class.py  joining_type.py  line_break_type.py  nameless_character.py  numeric_type.py  property_group.py  script_code.py  triadic_logic.py  unassigned_char_type.py  unicode_age.py  vertical_orientation_type.py
app/schemas/models/: block.py  camel_model.py  character.py  pagination.py  plane.py  search.py
app/static/: custom.js  index.html  swagger-ui-bundle.js  swagger-ui.css  swagger-ui.css.map
app/tests/: conftest.py  test_character_endpoints.py
app/tests/test_cached_data/: test_cached_data.py
app/tests/test_character_endpoints/: data.py  test_get_character_details.py
app/tests/test_db_session/: test_get_all_unicode_versions.py
app/tests/test_rate_limiting/: conftest.py  data.py  test_rate_limiting.py
src/unicode_api/: cli.py  constants.py  custom_types.py  main.py  tasks.py
src/unicode_api/config/: api_settings.py  dotenv_file.py
src/unicode_api/core/: cache.py  encoding.py  logging.py  rate_limit.py  redis_client.py  redis_types.py  result.py  umami.py  util.py
src/unicode_api/db/: character_props.py  engine.py  models.py  session.py
src/unicode_api/enums/: char_filter_flags.py  character_type.py  property_group.py  triadic_logic.py
src/unicode_api/models/: block.py  camel_model.py  character.py  pagination.py  plane.py  property_values.py  util.py
src/unicode_api/static/: custom.js  swagger-ui.css
tests/: conftest.py
tests/test_block_endpoints/test_get_unicode_block_details/: data.py  test_get_unicode_block_details.py
tests/test_block_endpoints/test_list_all_unicode_blocks/: data.py  test_list_all_unicode_blocks.py
tests/test_block_endpoints/test_search_unicode_blocks_by_name/: data.py  test_search_unicode_blocks_by_name.py
tests/test_cached_data/: test_cached_data.py
tests/test_character_endpoints/test_filter_unicode_characters/: data.py  test_filter_unicode_characters.py
tests/test_character_endpoints/test_get_unicode_character_details/: data.py  test_get_character_details.py
tests/test_character_endpoints/test_list_all_unicode_characters/: test_list_all_unicode_characters.py
tests/test_character_endpoints/test_search_unicode_characters_by_name/: data.py  test_search_unicode_characters_by_name.py
tests/test_codepoint_endpoints/test_get_unicode_character_at_codepoint/: data.py  test_get_unicode_character_at_codepoint.py
tests/test_db_session/: test_get_all_unicode_versions.py
tests/test_plane_endpoints/test_get_unicode_plane_details/: test_get_unicode_plane_details.py
tests/test_plane_endpoints/test_list_all_unicode_planes/: test_list_all_unicode_planes.py
tests/test_rate_limiting/: conftest.py  data.py  test_rate_limiting.py
typings/halo/: __init__.pyi  halo.pyi
typings/redis/: __init__.pyi  client.pyi  exceptions.pyi  lock.pyi  typing.pyi  utils.pyi
typings/redis/_parsers/: __init__.pyi  encoders.pyi
typings/redis/commands/: __init__.pyi  core.pyi
typings/sqlalchemy_utils/: __init__.pyi  exceptions.pyi
typings/sqlalchemy_utils/types/: __init__.pyi  choice.pyi  scalar_coercible.pyi
(+107 files in other folders)
