[project]
name = "unicode-api"
version = "0.1.0"
description = "API that provides access to detailed information for all characters, blocks and planes in the Unicode Standard (Built using FastAPI)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Aaron Luna", email = "contact@aaronluna.dev" }]
keywords = ["unicode", "unicode-api"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.vscode
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | venv
)/
'''

[tool.pyright]
venvPath = "/Users/aaronluna/Projects/unicode-api"
venv = "venv"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "C90",
    "E",
    "ERA",
    "F",
    "FA",
    "I",
    "INT",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PLE",
    "PLW",
    "PTH",
    "RUF100",
    "SIM",
    "UP",
    "W",
    "YTT",
]
extend-select = ["I"]
ignore = ["B019", "B905"]
fixable = ["I"]
unfixable = ["B", "C90", "PIE", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/**/__init__.py" = ["F401"]
"app/api/api_v1/dependencies.py" = ["E501"]
"app/data/scripts/update_test_data/update_test_list_all_unicode_blocks.py" = ["E501"]
"app/db/models.py" = ["F401"]
"app/docs/**/*" = ["E501"]
"app/models/{block,character,plane}.py" = ["F821"]
"app/models/property_values.py" = ["N801"]
"app/tasks.py" = ["F401"]
"app/tests/**/data.py" = ["E501"]

[tool.isort]
profile = "black"
ensure_newline_before_comments = true
skip_gitignore = true
line_length = 120
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
force_alphabetical_sort_within_sections = true
color_output = true

[tool.pytest.ini_options]
addopts = "-ra --showlocals --cov=app --cov-report term:skip-covered --cov-branch --cov-report html -vv --cache-clear --random-order-bucket=package"
norecursedirs = [".git", ".pytest_cache", ".vscode"]

[tool.coverage.run]
omit = [
    "app/cli.py",
    "app/config/dotenv_file.py",
    "app/core/config/config.py",
    "app/core/logging.py",
    "app/core/redis_client.py",
    "app/core/result.py",
    "app/core/util.py",
    "app/custom_types.py",
    "app/data/scripts/*",
    "app/data/util/*",
    "app/docs/*",
    "app/tests/*",
    "app/tasks.py",
]

[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def init_redis",
    "def init_unicode",
]

[tool.coverage.html]
directory = "coverage_html"

[tool.mypy]
python_version = "3.12"
